my-service-eval.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-api-service
  labels:
    app: mysql-api
spec:
  type: ClusterIP
  ports:
  - name: api
    port: 8001
    protocol: TCP
    targetPort: 8000
  - name: mysql
    port: 3306
    protocol: TCP
  selector:
    app: mysql-api
